# idaptik-ums

./: .editorconfig  .gitattributes  .gitignore  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  AGENTS.md  ARCHITECTURE.md  AUDIT.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXPLAINME.adoc  GOVERNANCE.adoc  GOVERNANCE.md  Justfile  LICENSE  MAINTAINERS  MAINTAINERS.adoc  READINESS.md  README.adoc  README.md  REUSE.toml  RSR-PHILOSOPHY.adoc  SECURITY.md  extractors-test.ipkg  flake.nix  guix.scm  idaptik-ums.ipkg  launcher.sh  mise.toml  rust-toolchain.toml  sonar-project.properties  unmerged.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  MAINTAINERS.adoc  SECURITY.md  dependabot.yml  funding.yml
.github/workflows/: config-gen.yml  governance.yml  hypatia-scan.yml  idris-ci.yml  licence-hygiene.yml  pages.yml  push-email-notify.yml  puzzle-data.yml  rust-ci.yml  spark-ci.yml  zig-ci.yml
.well-known/: ai.txt  humans.txt  security.txt
abi/: Assassin.idr  Devices.idr  Dogs.idr  Drones.idr  ExtractorsTest.idr  GameSystems.idr  Guards.idr  Hexadeca.idr  Inventory.idr  Level.idr  Mission.idr  Multiplayer.idr  Physical.idr  Primitives.idr  ProvenBridge.idr  Types.idr  Validation.idr  Wiring.idr  Zones.idr
ai_edit/: __init__.py  __main__.py  constraints.py  engine.py  microkanren.py  verbs.py  vocab.py
config/: connectors.ncl  edit-script-schema.ncl  hexadeca-idr.ncl  hexadeca-rs.ncl  hexadeca-zig.ncl  verbs.ncl  vocab-rs.ncl  vocab.ncl
crates/ums-ai-edit/: Cargo.toml
crates/ums-ai-edit/src/: constraints.rs  describe.rs  engine.rs  lib.rs  main.rs  microkanren.rs  verbs.rs  vocab.rs
crates/ums-ai-edit/tests/: engine.rs
crates/ums-profile-sdk/: Cargo.toml
crates/ums-profile-sdk/src/: lib.rs
crates/ums-profile-sdk/tests/: profiles.rs
dlc/: README.md
dlc/vm/: CHANGELOG.md  (+8 more)
docs/: ENACTION-ADAPTER.adoc  PROFILE-SDK.adoc  ROUNDTRIP-STATUS.adoc  STUDIO-INTERFACE.adoc
schemas/: README.adoc  dlc-manifest.schema.json  edit-script.schema.json  puzzle.schema.json  taxonomy-map.json
scripts/: check-abi-trusted-base.sh  gen.sh  proof-check-spark.sh  proven-min.ipkg  spark-parity.sh  validate_dlc.py  verify-substantial.sh
spark/: README.adoc  ums_zones.gpr  vectors.txt
tests/: test_ai_edit.py  test_taxonomy_map.py
(+137 files in other folders)
