# SPDX-License-Identifier: AGPL-3.0-or-later
# SPDX-FileCopyrightText: 2025-2026 Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>

[package]
name = "ums-profile-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Versioned, reflective game-profile contracts for Universal Modding Studio."

[dependencies]
serde.workspace = true
serde_json.workspace = true
